--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+  background-color: #eae7dc;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
